--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.13",
+    "@clerk/themes": "^2.1.17",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
+    "@supabase/supabase-js": "^2.45.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "geist": "^1.3.0",
     "next": "^14.2.4",
     "openai": "^4.54.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "svix": "^1.28.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
